Update fails index and style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Титул</h1>
+	<p>Ошибка, которую нужно будет убрать</p>
 	<a href="https://vk.com">Ссылка</a>
 </body>
 </html>
