--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 	<h1>Титул</h1>
 	<p>Ошибка, которую нужно будет убрать</p>
 	<a href="https://vk.com">Ссылка</a>
+	<div class="block-0">
+		<div class="block-1">
+			
+		</div>
+		<div class="block-2">
+			
+		</div>
+	</div>
 </body>
 </html>
